<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateInboxActivity">

    <TextView
        android:id="@+id/send_label"
        android:layout_width="67dp"
        android:layout_height="26dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="59dp"
        android:text="@string/sendlabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="234dp"
        android:layout_height="23dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="59dp"
        app:layout_constraintStart_toEndOf="@+id/send_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/subject_val"
        android:layout_width="345dp"
        android:layout_height="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="Subject"
        android:inputType="textPersonName"
        android:text="@string/subjectval"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/send_label" />

    <TextView
        android:id="@+id/message_label"
        android:layout_width="87dp"
        android:layout_height="26dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="48dp"
        android:text="@string/messagelabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subject_val" />

    <EditText
        android:id="@+id/message_val"
        android:layout_width="333dp"
        android:layout_height="220dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_label" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/sendbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_val" />

    <Button
        android:id="@+id/cancel_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:text="@string/cancelbtn"
        app:layout_constraintStart_toEndOf="@+id/send_btn"
        app:layout_constraintTop_toBottomOf="@+id/message_val" />

</androidx.constraintlayout.widget.ConstraintLayout>